fix: 모달 시 다른 요소의 z-index 충돌 문제 해결

--- a/src/Pages/DiaryListPage/DiaryListPage.module.scss
+++ b/src/Pages/DiaryListPage/DiaryListPage.module.scss
@@ -195,7 +195,7 @@
   .write-container {
     position: fixed;
     bottom: 0;
-    z-index: 13;
+    z-index: 2;
     background-color: var(--white);
     width: auto;
     transform: translateX(-1.25rem);
@@ -253,7 +253,7 @@
 }
 
 .add-diary {
-  z-index: 7;
+  z-index: 1;
   position: absolute;
   bottom: calc(100% + var(--size-2));
   left: calc(50% + 123px);
